--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -340,6 +340,12 @@ h6 {
     line-height: 24px;
   }
 }
+#hero .profile-photo {
+  max-width: 100%;
+  height: auto;
+  width: 100%;
+}
+
 
 /*--------------------------------------------------------------
 # Sections General
